# webmt32

./: .editorconfig  .gitignore  .gitmodules  README.md  emscripten-build.ini  index.html  library.js  main.cc  meson.build  syntherizers.hh
openal/: build-desktop.sh  build.sh  index.js  index.wasm  main.cc
src/: display.hh  main.cc  midiparser.hh  receivers.hh  synthesizers.hh
subprojects/: .gitignore  fluidsynth.wrap
wasmbuild/: webmt32.js  webmt32.wasm
worklet/: build.sh  index.html  main.cc  webmt32.aw.js  webmt32.js  webmt32.wasm
